--- a/index.html
+++ b/index.html
@@ -2,13 +2,42 @@
 <html lang="en">
 <head>
     <title>Electra Batteries</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>ELECTRA BATTERIES</h1>
+    <h1>ELECTRA BATTERIES</h1> 
 <h2>Gives you unlimited power</h2>
 <p style="font-style: italic;">Our Electra batteries are universal and compatible with any elecric vehicle, 
  you can switch your dischaeged battery with the charged one with a peet stop
 and we will make your journey unstoppable.</p>
 <img src="./practice/electra batteries.jpg" alt="product image"height="200" width="300">
+<h3>you can shop our product through amazon and flipkart</h3> <a href="https://www.amazon.in/s?k=lithium+ion+battery+12v+rechargeable&crid=WEVYRQUR5HOX&sprefix=lithium+ion+battery+12v%2Caps%2C279&ref=nb_sb_ss_ts-doa-p_1_23">shop here</a>
+<img src="./image1.png"height="150" width="200"  alt="product image 2">
+<h4>power brick 12W</h4>
+<img src="./image2.jpeg"height="150" width="200" alt="product image 3">
+<h5>Set of Three</h5>
+<img src="./image3.jpeg"height="150" width="200" alt="product image 4">
+<H6>Nazi2 12W</H6>
+<img src="./image4.jpg"height="150" width="200" alt="product image 5">
+<h7>60 Volts</h7>
 </body>
+<div>
+    for Enquiery
+
+
+    <form method="post">
+        <div>
+            <label for="name">Name: </label>
+            <input type="text">
+        </div>
+        <div>
+            <label for="email">Email id:</label>
+            <input type="email">
+        </div>
+        <div>
+            <label for="mobile number">mobile no.:</label>
+            <input type="numbers">
+        </div>
+    </form>
+</div>
 </html>
