--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
  you can switch your dischaeged battery with the charged one with a peet stop
 and we will make your journey unstoppable.</p>
 <img src="./practice/electra batteries.jpg" alt="product image"height="200" width="300">
-<h3>you can shop our product through amazon and flipkart</h3> <a href="https://www.amazon.in/s?k=lithium+ion+battery+12v+rechargeable&crid=WEVYRQUR5HOX&sprefix=lithium+ion+battery+12v%2Caps%2C279&ref=nb_sb_ss_ts-doa-p_1_23">shop here</a>
-<img src="./image1.png"height="150" width="200"  alt="product image 2">
-<h4>power brick 12W</h4>
-<img src="./image2.jpeg"height="150" width="200" alt="product image 3">
-<h5>Set of Three</h5>
-<img src="./image3.jpeg"height="150" width="200" alt="product image 4">
-<H6>Nazi2 12W</H6>
-<img src="./image4.jpg"height="150" width="200" alt="product image 5">
-<h7>60 Volts</h7>
-</body>
+<h3>you can shop our product through amazon and flipkart <a href="https://www.amazon.in/s?k=lithium+ion+battery+12v+rechargeable&crid=WEVYRQUR5HOX&sprefix=lithium+ion+battery+12v%2Caps%2C279&ref=nb_sb_ss_ts-doa-p_1_23">shop here</a> </h3>
+<hr>
 <div>
-    for Enquiery
+    <img src="./image1.png"height="150" width="200"  alt="product image 2">
+    power brick 12W
+</div>
+<hr>
+<div>
+    <img src="./image2.jpeg"height="150" width="200" alt="product image 3">
+    Set of Three
+</div>
+<hr>
+<div>
+    <img src="./image3.jpeg"height="150" width="200" alt="product image 4">
+    Nazi2 12W
+</div>
+<hr>
+<div>
+    <img src="./image4.jpg"height="150" width="200" alt="product image 5">
+    60 Volt
+</div>
+</body>
+<hr>
+<div>
+    <br>
 
+ For Enquiery
+<br>
 
     <form method="post">
         <div>
@@ -38,6 +53,53 @@ and we will make your journey unstoppable.</p>
             <label for="mobile number">mobile no.:</label>
             <input type="numbers">
         </div>
+        <div>
+            <label for="address">Address:</label>
+            <label for="State">State:</label>
+            <select>
+                <option value="">select state</option>
+                <option value="">Maharashtra</option>
+                <option value="">Gujrat</option>
+                <option value="">Goa</option>
+                <option value="">Tamilnadu</option>
+                <option value="">Delhi</option>
+            </select>  
+            <label for="District">District:</label>
+            <select>
+                <option value="">Ahmednagar</option>
+                <option value="">Mumbai</option>
+                <option value="">Sambhajinagar</option>
+            </select>
+        </div>
+        <div>
+            <label for="Gender">Gender:</label>
+            <label for="Male">Male</label>
+            <input type="radio" name="gender">
+            <label for="Female">Female</label>
+            <input type="radio" name="gender">
+            <label for="other">other</label>
+            <input type="radio" name="gender">
+        </div>
+        <div>
+            <label for="Required for">Required for:</label>
+            <label for="EV">EV</label>
+            <input type="checkbox">
+            <label for="Shop">Shop</label>
+            <input type="checkbox">
+            <label for="Spare">Spare</label>
+            <input type="checkbox">
+
+
+
+        </div>
+        <div>
+            <button disabled="disabled">Disable</button>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+        </div>
+
+        
     </form>
+
 </div>
 </html>
