--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ and we will make your journey unstoppable.</p>
             </select>  
             <label for="District">District:</label>
             <select>
+                <option value="select district">Select District</option>
                 <option value="">Ahmednagar</option>
                 <option value="">Mumbai</option>
                 <option value="">Sambhajinagar</option>
