--- a/day7 practice/tomorrowland.html
+++ b/day7 practice/tomorrowland.html
@@ -26,10 +26,22 @@
         <br>
 
         <div class="navbar">
-            <i class="fa fa-person"></i> <h5>Best Artist</h5> 
-            <i class="fa fa-music"></i> <h5>Famous DJ's</h5> 
-            <i class="fa-solid fa-plane"></i> <h5>Best Place</h5> 
-            <i class="fa-solid fa-comments"></i> <h5>Best Community</h5> 
+            <div class="person">
+                <i class="fa fa-person"></i>
+                <p>Best Artist</p>
+            </div>
+            <div class="dj">
+                <i class="fa fa-music"></i>
+                <p>Famous DJ's</p>
+            </div>
+            <div class="place">
+                <i class="fa-solid fa-plane"></i>
+                <p>Best Place</p>
+            </div>
+            <div class="community">
+                <i class="fa-solid fa-comments"></i>
+                <p>Best Community</p>
+            </div>
 
         </div>
 
